--- a/grpcclient/requirements.txt
+++ b/grpcclient/requirements.txt
@@ -5,3 +5,6 @@ grpcio==1.67.0
 grpcio-tools==1.67.0
 azure-mgmt-applicationinsights
 azure-identity
+
+azure-monitor-opentelemetry==1.6.2
+opentelemetry-instrumentation-fastapi==0.48b0
